added buttons to html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
-        <button class= "" id="start">Start Quiz</button>
+        <button class="" id="start">Start Quiz</button>
       </div>
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button class="choiceBtn">Answer 1</button>
+          <button class="choiceBtn">Answer 1</button>
+          <button class="choiceBtn">Answer 1</button>
+          <button class="choiceBtn">Answer 1</button>
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
