Set new question works

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div id="questions" class="hide">
-        <h2 id="question-title"></h2>
+        <h2 id="question-title">Title1</h2>
         <div id="choices" class="choices">
           <button class="choiceBtn">Answer 1</button>
           <button class="choiceBtn">Answer 1</button>
