updated JS quiz working up until end screen

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div id="questions" class="hide">
         <h2 id="question-title">Title1</h2>
         <div id="choices" class="choices">
+          <!-- <button class="choiceBtn">Answer 1</button>
           <button class="choiceBtn">Answer 1</button>
           <button class="choiceBtn">Answer 1</button>
-          <button class="choiceBtn">Answer 1</button>
-          <button class="choiceBtn">Answer 1</button>
+          <button class="choiceBtn">Answer 1</button> -->
         </div>
       </div>
 
