--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
 
     <script src="./assets/js/questions.js"></script>
+    <script src="assets/js/scores.js"></script>
     <script src="./assets/js/logic.js"></script>
   </body>
 </html>
